force-app/main/default/objects/SetupMessagingSession__c/SetupMessagingSession__c.object-meta.xml
<CustomObject>
    <label>Configuração Messaging Session</label>
    <nameField>
        <displayFormat>CMS-{0000}</displayFormat>
        <label>Configuração Messaging Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuração Messaging Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>