force-app/main/default/objects/SetupMessagingSession__c/fields/MinuteSLAN1__c.field-meta.xml
<CustomField>
    <fullName>MinuteSLAN1__c</fullName>
    <label>Minutos SLA N1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>