force-app/main/default/objects/SetupMessagingSession__c/fields/MinuteSLAN2__c.field-meta.xml
<CustomField>
    <fullName>MinuteSLAN2__c</fullName>
    <label>Minutos SLA N2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>