force-app/main/default/objects/SetupMessagingSession__c/fields/MinuteSLAN3__c.field-meta.xml
<CustomField>
    <fullName>MinuteSLAN3__c</fullName>
    <label>Minutos SLA N3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>