force-app/main/default/objects/SetupMessagingSession__c/fields/QueueAtendentRole__c.field-meta.xml
<CustomField>
    <fullName>QueueAtendentRole__c</fullName>
    <label>Atendente da Fila (N1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MessagingSessionRoles</valueSetName>
    </valueSet>
</CustomField>