force-app/main/default/objects/SetupMessagingSession__c/fields/QueueCoordinatorRole__c.field-meta.xml
<CustomField>
    <fullName>QueueCoordinatorRole__c</fullName>
    <label>Coordenador da Fila (N3)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MessagingSessionRoles</valueSetName>
    </valueSet>
</CustomField>