force-app/main/default/objects/SetupMessagingSession__c/fields/QueueSupervisor__c.field-meta.xml
<CustomField>
    <fullName>QueueSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor da Fila</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Configura_o_Messaging_Session</relationshipName>
    <type>Lookup</type>
</CustomField>