force-app/main/default/objects/SetupMessagingSession__c/fields/QueueSupervisorRole__c.field-meta.xml
<CustomField>
    <fullName>QueueSupervisorRole__c</fullName>
    <label>Supervisor da Fila (N2)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MessagingSessionRoles</valueSetName>
    </valueSet>
</CustomField>