force-app/main/default/objects/SetupMessagingSession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>MinuteSLAN1__c</columns>
    <columns>MinuteSLAN2__c</columns>
    <columns>MinuteSLAN3__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>QueueAtendentRole__c</columns>
    <columns>QueueSupervisor__c</columns>
    <columns>QueueSupervisorRole__c</columns>
    <columns>QueueCoordinatorRole__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>