force-app/main/default/objects/SetupMessagingSession__c/listViews/Assistencia_tecnica_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Assistencia_tecnica_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Assistência tecnica</label>
    <queue>Assistencia_tecnica</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>