force-app/main/default/objects/SetupMessagingSession__c/listViews/Comercial_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Comercial_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Comercial</label>
    <queue>Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>