force-app/main/default/objects/SetupMessagingSession__c/listViews/Contratos_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Contratos_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Contratos</label>
    <queue>Contratos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>