force-app/main/default/objects/SetupMessagingSession__c/listViews/Proposta_Connect_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Proposta_Connect_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Connect</label>
    <queue>Proposta_Connect</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>