force-app/main/default/objects/SetupMessagingSession__c/listViews/Proposta_Direct_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Proposta_Direct_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Direct</label>
    <queue>Proposta_Direct</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>