force-app/main/default/objects/SetupMessagingSession__c/listViews/Proposta_Ezee_Livre_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Proposta_Ezee_Livre_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Ezee Livre</label>
    <queue>Proposta_Ezee_Livre</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>