force-app/main/default/objects/SetupMessagingSession__c/listViews/Proposta_Ezee_Solar_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Proposta_Ezee_Solar_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Ezee Solar</label>
    <queue>Proposta_Ezee_Solar</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>