force-app/main/default/objects/SetupMessagingSession__c/listViews/Proposta_Financiamento_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Proposta_Financiamento_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Financiamento</label>
    <queue>Proposta_Financiamento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>