force-app/main/default/objects/SetupMessagingSession__c/listViews/Proposta_Produtos_e_Servi_os_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>Proposta_Produtos_e_Servi_os_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Proposta - Produtos e Serviços</label>
    <queue>Proposta_Produtos_e_Servi_os</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>