force-app/main/default/objects/SetupMessagingSession__c/listViews/QualificacaoDeConsultores_SetupMessagingSession.listView-meta.xml
<ListView>
    <fullName>QualificacaoDeConsultores_SetupMessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Qualificação de Consultores</label>
    <queue>QualificacaoDeConsultores</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>